--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
     "seed": "ts-node prisma/seed.ts",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "axios": "^1.11.0",
@@ -17,7 +20,9 @@
     "next": "15.4.4",
     "prisma": "^6.12.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -31,6 +36,7 @@
     "eslint-config-next": "15.4.4",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
