--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.12.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
