--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
+    "sweetalert2": "^11.22.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
