--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.12.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "next": "15.4.4",
     "prisma": "^6.12.0",
